syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Cheetah_GrpcService";

package greet;


// The greeting service definition.
service Request {
  // Sends a greeting
  rpc CreateRequest (Create_Input_Request) returns (Brief_Request);
  rpc PerformRequest (Perform_Input_Request) returns (Brief_Request);
  rpc GetCase (Brief_Request) returns (DetailOutput_Request);  
  rpc Inbox (PageCartable) returns (PageCartable);
  rpc Outbox (PageCartable) returns (PageCartable);
  rpc GetAllByName (TableInfo) returns (TableInfo);
  rpc Sync(TableInfo) returns (TableInfo);
}

message TableInfo
{
    GRPC_BaseClass TableInput = 1;
    repeated GRPC_BaseClass TableOutput = 2;
}

message PageCartable
{
    int32 PageNumber = 1;
    int32 PageSize  = 2;
    int32 TotalItems  = 3;
    GRPC_BaseClass Assignee = 4;
    GRPC_BaseClass CaseState = 5;
    GRPC_BaseClass Process = 6;
    repeated RecordCartable RecordCartables = 7;
}

message RecordCartable
{    
    GRPC_BaseClass D_Tag = 1;
    GRPC_BaseClass Requestor  = 2;
    int64 CaseId  = 3;
    int64 WorkItemId  = 4;
    google.protobuf.Timestamp CreateDate  = 5;
    google.protobuf.Timestamp RecieveDate = 6;
    GRPC_BaseClass Process = 7;
    GRPC_BaseClass Task = 8;
    GRPC_BaseClass CaseState = 9;
    repeated GRPC_BaseClass ValidUserActions = 10;
    string Summary = 11;
}

message Brief_Request
{
    int64 CaseId = 1;
    int64  ERPCode = 2;
    GRPC_BaseClass Process = 3;
    GRPC_BaseClass CaseState = 4;
}

message Create_Input_Request
{
     
     int64  ERPCode = 1;
     GRPC_BaseClass Creator = 2;
     GRPC_BaseClass Requestor = 3;
     GRPC_BaseClass Process = 4;
     repeated GRPC_BaseClass Conditions = 5;
}

message Perform_Input_Request
{
     int64  WorkItemId = 1;
     GRPC_BaseClass Tag = 2;
}

message DetailOutput_Request
{
    int64  Id = 1;
    int64  ERPCode = 2;
    GRPC_BaseClass Process = 3;
    GRPC_BaseClass CaseState = 4;
    repeated GRPC_Assignment Assignments = 5;
}

message GRPC_Assignment
{
    GRPC_BaseClass Endorsement = 1;
    repeated GRPC_UserAssignment UserAssignments = 2;
}

message GRPC_UserAssignment
{
    int64 WorkItemId = 1;
    google.protobuf.Timestamp LastUpdatedRecord = 2;
    GRPC_BaseClass User = 3;
    GRPC_BaseClass Tag = 4;
    GRPC_BaseClass WorkItemState = 5;
}

message GRPC_BaseClass
{
    int64 Id = 1;
    int64 ERPCode = 2;
    string Name = 3;
    string DisplayName = 4;
}