syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Cheetah_GrpcService";

package greet;

// The greeting service definition.
service Request {
  // Sends a greeting
  rpc CreateRequest (CreateRequest_Input) returns (CreateRequest_Output);
  rpc GetAllByName (GetAllByName_Input) returns (GetAllByName_Output);
  rpc GetCase (GetCase_Input) returns (GetCase_Output);
  rpc Inbox (Cartable_Input) returns (Cartable_Output);
  rpc Outbox (Cartable_Input) returns (Cartable_Output);
  rpc PerformRequest (PerformRequest_Input) returns (PerformRequest_Output);
  rpc SetCaseTaskUser (SetCaseTaskUser_Input) returns (SetCaseTaskUser_Output);
  rpc SyncEntity (SyncEntity_Input) returns (GRPC_BaseClassWithName);
  rpc SyncLink (SyncLink_Input) returns (GRPC_BaseClassWithName);
}
message CreateRequest_Input
{
     GRPC_BaseClass Case = 1;
     GRPC_BaseClassWithName Creator = 2;
     GRPC_BaseClassWithName Requestor = 3;
     GRPC_BaseClassWithName Process = 4;
     repeated GRPC_Condition Conditions = 5;
     GRPC_WorkItem WorkItem = 6;
}

message CreateRequest_Output
{
    GRPC_Case Case = 1;
    GRPC_BaseClassWithName OutputState = 2;
}
message GetAllByName_Input
{
    GRPC_BaseClassWithName TableInput = 1;
}

message GetAllByName_Output
{
    GRPC_BaseClassWithName TableInput = 1;
    repeated GRPC_BaseClassWithName TableOutput = 2;
    GRPC_BaseClassWithName OutputState = 3;
}
message GetCase_Input
{
    GRPC_BaseClass Case = 1;
    GRPC_BaseClassWithName CaseState = 2;
    GRPC_BaseClassWithName Process = 3;
}

message GetCase_Output
{
    GRPC_Case Case = 1;
    GRPC_BaseClassWithName OutputState = 2;
}

message PerformRequest_Input
{
     GRPC_WorkItem WorkItem = 1;
     bool Rebase = 2;
}

message PerformRequest_Output
{
    GRPC_Case Case = 1;
    GRPC_BaseClassWithName OutputState = 2;
}

message Cartable_Input
{
    google.protobuf.Int64Value PageNumber = 1;
    google.protobuf.Int64Value PageSize  = 2;
    google.protobuf.Int64Value TotalItems  = 3;
    GRPC_BaseClassWithName Assignee = 4;
    GRPC_BaseClassWithName Process = 5;
    GRPC_BaseClass Case  = 6;
    GRPC_BaseClassWithName CaseState = 7;
    GRPC_BaseClass WorkItem  = 8;
}

message Cartable_Output
{
    google.protobuf.Int64Value PageNumber = 1;
    google.protobuf.Int64Value PageSize  = 2;
    google.protobuf.Int64Value TotalItems  = 3;    
    repeated GRPC_Case Cases = 4;
    GRPC_BaseClassWithName OutputState = 5;
}

message SetCaseTaskUser_Input
{
    GRPC_BaseClass Case = 1;
    GRPC_BaseClassWithName Task = 2;
    GRPC_BaseClassWithName User = 3;
}

message SetCaseTaskUser_Output
{
    GRPC_BaseClass Case = 1;
    GRPC_BaseClassWithName Task = 2;
    GRPC_BaseClassWithName User = 3;
    GRPC_BaseClassWithName OutputState = 4;
}

message SyncEntity_Input
{
    GRPC_BaseClassWithName Base = 1;
    repeated GRPC_BaseClassWithNameAndDate Records = 2;
    google.protobuf.Int64Value Crud = 3;
}
message SyncLink_Input
{
    GRPC_BaseClassWithName Base = 1;
    repeated LinkEntity Records = 2;
    google.protobuf.Int64Value Crud = 3;
}
message LinkEntity
{
    GRPC_BaseClass First = 1;
    GRPC_BaseClass Second = 2;
}

message GRPC_BaseClass
{
    google.protobuf.Int64Value Id = 1;
    google.protobuf.Int64Value ERPCode = 2;
    google.protobuf.Int64Value SortIndex = 3;
}

message GRPC_BaseClassWithName
{
    google.protobuf.Int64Value Id = 1;
    google.protobuf.Int64Value ERPCode = 2;
    google.protobuf.Int64Value SortIndex = 3;
    google.protobuf.StringValue Name = 4;
    google.protobuf.StringValue DisplayName = 5;
}

message GRPC_BaseClassWithDate
{
    google.protobuf.Int64Value Id = 1;
    google.protobuf.Int64Value ERPCode = 2;
    google.protobuf.Int64Value SortIndex = 3;
    google.protobuf.Timestamp CreateTimeRecord = 4;
    google.protobuf.Timestamp LastUpdatedRecord = 5;
}

message GRPC_BaseClassWithNameAndDate
{
    google.protobuf.Int64Value Id = 1;
    google.protobuf.Int64Value ERPCode = 2;
    google.protobuf.Int64Value SortIndex = 3;
    google.protobuf.StringValue Name = 4;
    google.protobuf.StringValue DisplayName = 5;
    google.protobuf.Timestamp CreateTimeRecord = 6;
    google.protobuf.Timestamp LastUpdatedRecord = 7;
}

message GRPC_Task
{
    GRPC_BaseClassWithName Base = 1;
    repeated GRPC_WorkItem WorkItems = 2;
}

message GRPC_WorkItem
{
    GRPC_BaseClassWithDate Base = 1;
    GRPC_BaseClassWithName User = 2;    
    GRPC_BaseClassWithName WorkItemState = 3;
    repeated GRPC_Condition OccurredUserActions = 4;
    repeated GRPC_Condition ValidUserActions = 5;
}

message GRPC_Condition
{
    GRPC_BaseClassWithName Base = 1;
    GRPC_BaseClassWithName Tag = 2;
    GRPC_BaseClassWithName Operand = 3;
    google.protobuf.StringValue Value = 4;
}

message GRPC_Case
{
    GRPC_BaseClassWithDate Base = 1;
    GRPC_BaseClassWithName Process = 2;
    GRPC_BaseClassWithName Creator = 3;
    GRPC_BaseClassWithName Requestor = 4;
    repeated GRPC_Task Tasks = 5;
    GRPC_BaseClassWithName CaseState = 6;
}